Cambiar palabra pechuga por carne

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Dinonuggets - La opción ganadora para tu menú infantil</title>
         <meta
             name="description"
-            content="Nuestros Dinonuggets están hechos 100% de pechuga de pollo y vienen en divertidas formas de dinosaurio para atraer a los más peques."
+            content="Nuestros Dinonuggets están hechos 100% de carne de pollo y vienen en divertidas formas de dinosaurio para atraer a los más peques."
         />
 
         <link
@@ -199,7 +199,7 @@
                             <span class="text-primary"
                                 ><strong>Dinonuggets</strong></span
                             >
-                            están hechos 100% de pechuga de pollo y vienen en
+                            están hechos 100% de carne de pollo y vienen en
                             divertidas formas de dinosaurio para atraer a los
                             más peques.
                         </p>
@@ -324,7 +324,7 @@
                                         Calidad garantizada
                                     </h5>
                                     <p class="card-text">
-                                        Hechos con 100% pechuga de pollo, ofrecen un sabor delicioso y saludable que genera confianza en tus comensales.
+                                        Hechos con 100% carne de pollo, ofrecen un sabor delicioso y saludable que genera confianza en tus comensales.
                                     </p>
                                 </div>
                             </div>
@@ -423,7 +423,7 @@
                                         <div class="card-body">
                                             <h5 class="card-title">La Casita del Sabor</h5>
                                             <p class="card-text">
-                                                Agregar los Dino Nuggets al menú infantil fue un éxito rotundo. A los niños les encanta su forma divertida, y para nosotros, es un alivio saber que son 100% pechuga de pollo. ¡Nuestros clientes ahora vienen más seguido con sus pequeños!
+                                                Agregar los Dino Nuggets al menú infantil fue un éxito rotundo. A los niños les encanta su forma divertida, y para nosotros, es un alivio saber que son 100% carne de pollo. ¡Nuestros clientes ahora vienen más seguido con sus pequeños!
                                             </p>
                                             <p class="fw-bold">― Sofía R.</p>
                                         </div>
@@ -479,7 +479,7 @@
                                         <div class="card-body">
                                             <h5 class="card-title">Mamá</h5>
                                             <p class="card-text">
-                                                Los Dino Nuggets han sido mi salvación para el lunch de mis hijos. Se preparan en minutos y siempre quedan deliciosos. Además, sé que estoy dándoles algo de calidad porque están hechos con pechuga de pollo.
+                                                Los Dino Nuggets han sido mi salvación para el lunch de mis hijos. Se preparan en minutos y siempre quedan deliciosos. Además, sé que estoy dándoles algo de calidad porque están hechos con carne de pollo.
                                             </p>
                                             <p class="fw-bold">― Laura P.</p>
                                         </div>
