--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
                             >
                         </li>
                         <li>
+                            <a class="anchor" id="btn-nav-3" href="#preparacion"
+                                >Preparación</a
+                            >
+                        </li>
+                        <li>
                             <a class="anchor" id="btn-nav-4" href="#testimonios"
                                 >Testimonios</a
                             >
@@ -99,6 +104,9 @@
                                 </li>
                                 <li class="list-inline-item">
                                     <a href="#beneficios"> Beneficios </a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="#preparacion"> Preparación </a>
                                 </li>
                                 <li class="list-inline-item">
                                     <a href="#testimonios"> Testimonios </a>
@@ -178,22 +186,12 @@
 
         <section id="producto" class="pt-60 pb-30">
             <div class="container">
-                <div class="row">
-                    <div class="col-lg-6 my-auto">
-                        <img
-                            src="./assets/images/thumb-producto.png"
-                            alt=""
-                            class="rounded img-fluid mb-4"
-                            data-aos="fade-up"
-                            data-aos-duration="1000"
-                            data-aos-delay="0"
-                        />
-                    </div>
+                <div class="row mb-5">
                     <div class="col-lg-6 my-auto">
                         <p
                             data-aos="fade-up"
                             data-aos-duration="1000"
-                            data-aos-delay="100"
+                            data-aos-delay="0"
                         >
                             Nuestros
                             <span class="text-primary"
@@ -206,16 +204,16 @@
                         <p
                             data-aos="fade-up"
                             data-aos-duration="1000"
-                            data-aos-delay="200"
+                            data-aos-delay="100"
                         >
                             Características principales:
                         </p>
-                        <ul class="list-unstyled">
+                        <ul class="list-unstyled mb-5 mb-lg-0">
                             <li
                                 class="mb-3"
                                 data-aos="fade-up"
                                 data-aos-duration="1000"
-                                data-aos-delay="300"
+                                data-aos-delay="200"
                             >
                                 <img
                                     class="bullet"
@@ -228,7 +226,7 @@
                                 class="mb-3"
                                 data-aos="fade-up"
                                 data-aos-duration="1000"
-                                data-aos-delay="400"
+                                data-aos-delay="300"
                             >
                                 <img
                                     class="bullet"
@@ -242,7 +240,7 @@
                                 class="mb-3"
                                 data-aos="fade-up"
                                 data-aos-duration="1000"
-                                data-aos-delay="500"
+                                data-aos-delay="400"
                             >
                                 <img
                                     class="bullet"
@@ -251,15 +249,87 @@
                                 />
                                 <strong>Calidad garantizada</strong>
                             </li>
+                            <li
+                                class="mb-3"
+                                data-aos="fade-up"
+                                data-aos-duration="1000"
+                                data-aos-delay="500"
+                            >
+                                <img
+                                    class="bullet"
+                                    src="./assets/images/ico-4.png"
+                                    alt=""
+                                />
+                                Precocinados <strong>listos en 5 minutos</strong>
+                            </li>
                         </ul>
+                    </div>
+                    <div class="col-lg-6 my-auto">
+                        <img
+                            src="./assets/images/thumb-producto.png"
+                            alt=""
+                            class="rounded img-fluid mb-4"
+                            data-aos="fade-up"
+                            data-aos-duration="1000"
+                            data-aos-delay="600"
+                        />
+                    </div>
+                </div>
+                <div class="row text-center">
+                    <div class="col-lg-6 my-auto">
+                        <div
+                            class="card text-bg-light mb-4"
+                            data-aos="fade-up"
+                            data-aos-duration="1000"
+                            data-aos-delay="700"
+                        >
+                            <div class="card-body">
+                                <div>
+                                    <h5 class="card-title">
+                                        Empaque
+                                    </h5>
+                                    <p class="card-text">
+                                        <ul class="list-unstyled">
+                                            <li class="mb-2">Peso por pieza 20 grs ±2</li>
+                                            <li class="mb-2"><strong>Empaque primario:</strong><br>Bolsa de polietileno con caducidad y lote impreso</li>
+                                            <li class="mb-2"><strong>Empaque secundario:</strong><br>Caja de 9.6 a 10 kg</li>
+                                            <li class="mb-2"><strong>Característica:</strong><br>Congelado -10 ℃ mínimo</li>
+                                            <li><strong>Piezas por caja:</strong><br>4 bolsas</li>
+                                        </ul>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 my-auto">
+                        <div
+                            class="card text-bg-light mb-4"
+                            data-aos="fade-up"
+                            data-aos-duration="1000"
+                            data-aos-delay="800"
+                        >
+                            <div class="card-body">
+                                <div>
+                                    <h5 class="card-title">
+                                        Almacenamiento
+                                    </h5>
+                                    <p class="card-text">
+                                        <ul class="list-unstyled">
+                                            <li class="mb-2"><strong>Temperatura:</strong><br>Congelado</li>
+                                            <li><strong>Vida de anaquel:</strong><br>365 días (en congelación)</li>
+                                        </ul>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
 
-        <section id="beneficios" class="pt-30 pb-60">
+        <section id="beneficios" class="pt-30 pb-30">
             <div class="container">
-                <div class="row mb-4">
+                <div class="row mb-5">
                     <div class="col text-center">
                         <h1
                             data-aos="fade-up"
@@ -388,6 +458,44 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </section>
+
+        <section id="preparacion" class="pt-30 pb-60">
+            <div class="container">
+                <div class="row mb-5">
+                    <div class="col text-center">
+                        <h1
+                            data-aos="fade-up"
+                            data-aos-duration="1000"
+                            data-aos-delay="0"
+                        >
+                            Formas de
+                            <span class="text-primary">preparación</span>
+                        </h1>
+                    </div>
+                </div>
+                <div class="row mb-5">
+                    <div class="col text-center">
+                        <ul class="list-inline">
+                            <li class="list-inline-item" data-aos="fade-up"
+                            data-aos-duration="1000"
+                            data-aos-delay="0">
+                                <img class="img-fluid" src="./assets/images/preparacion/ico-1.png" alt="Sartén">
+                            </li>
+                            <li class="list-inline-item" data-aos="fade-up"
+                            data-aos-duration="1000"
+                            data-aos-delay="100">
+                                <img class="img-fluid" src="./assets/images/preparacion/ico-2.png" alt="Air Fryer">
+                            </li>
+                            <li class="list-inline-item" data-aos="fade-up"
+                            data-aos-duration="1000"
+                            data-aos-delay="200">
+                                <img class="img-fluid" src="./assets/images/preparacion/ico-3.png" alt="Horno">
+                            </li>
+                        </ul>
+                    </div>
+                </div>
                 <div class="row">
                     <div class="col text-center">
                         <a
@@ -395,7 +503,7 @@
                             class="btn btn-primary btn-lg rounded-pill"
                             data-aos="fade-up"
                             data-aos-duration="1000"
-                            data-aos-delay="700"
+                            data-aos-delay="300"
                             >¡Pide tus dinonuggets!</a
                         >
                     </div>
