Agregar íconos faltantes

--- a/index.html
+++ b/index.html
@@ -493,6 +493,16 @@
                             data-aos-delay="200">
                                 <img class="img-fluid" src="./assets/images/preparacion/ico-3.png" alt="Horno">
                             </li>
+                            <li class="list-inline-item" data-aos="fade-up"
+                            data-aos-duration="1000"
+                            data-aos-delay="300">
+                                <img class="img-fluid" src="./assets/images/preparacion/ico-4.png" alt="Horno">
+                            </li>
+                            <li class="list-inline-item" data-aos="fade-up"
+                            data-aos-duration="1000"
+                            data-aos-delay="400">
+                                <img class="img-fluid" src="./assets/images/preparacion/ico-5.png" alt="Horno">
+                            </li>
                         </ul>
                     </div>
                 </div>
